listeler dersi tamamlandı

--- a/IntrotoHTML.html
+++ b/IntrotoHTML.html
@@ -14,3 +14,55 @@
 
 <h3> Başlıklar ve Paragraflar</h3>
 <h2> CSS </h2>
+
+<!--
+    Sıralı Listelere -> 1,2,3 ordered list -> ol
+    Sırasız Listeler -> *,*,* unordered list -> ul
+    List item -> il
+-->
+<ol> 
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+    <li> Liste Öğesi 3</li>
+</ol>
+
+<ol type="I">             <!--  Liste içinde tip belirtebilirz I roma rakamına geçirir, A  alfabetik yapar.-->
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+    <li> Liste Öğesi 3</li>
+</ol>
+
+<ul>
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+    <li> Liste Öğesi 3</li>
+</ul>
+
+
+<ul style="list-style-type:none"> <!-- Liste başındaki eleman bu şekilde silinir.-->
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+    <li> Liste Öğesi 3</li>
+</ul>
+
+<ul style="list-style-type:square">
+
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+    <li> Liste Öğesi 3</li>
+</ul>
+
+<!--
+    İç içe listeler aşağıdaki gibi oluşturulabilir.
+-->
+
+<ol>
+    <li> Liste Öğesi 1</li>
+    <li> Liste Öğesi 2</li>
+        <ul>
+            <li> Liste Öğesi 1</li>
+            <li> Liste Öğesi 2</li>
+            <li> Liste Öğesi 3</li>
+        </ul>
+    <li> Liste Öğesi 3</li>
+</ol>
