block dersleri tamamlandı.

--- a/block_inline_elements.html
+++ b/block_inline_elements.html
@@ -1,5 +1,22 @@
 <!-- Kodları belli bir blok içerisine almak için kullanılırlar.-->
 
 <div>
-    
+    <!--
+        bu şekilde div kullanarak birden fazla eleman bir blok içinde kullanılabilir
+    -->
 </div>
+
+<hr> <!-- çizgi olmasını sağlıyor-->
+
+<span>
+    <!-- sanal blok oluşturur. -->
+    
+</span>
+
+<p>
+    Lorem, <strong> ipsum</strong> dolor sit amet <em>consectetur </em>  <span style="color: blueviolet;">adipisicing elit. A,</span> tenetur!
+
+</p>
+
+<strong></strong> <!-- bold yapar inline elementtir-->
+<em></em> <!-- italik yapar, inline elementtir -->
