--- a/index.html
+++ b/index.html
@@ -7,11 +7,48 @@
 </p>
 
 <h2> En Sevdiğim Müzik Türleri </h2> <!-- İkinci başlıkla aynı tipte bir başlık daha oluşturuldu. -->
-<p>1.Rock</p>
-<p>2.POP</p>
-<p>3.Klasik</p>
+<ol>
+    <li>Rock</li>
+    <li>Pop</li>
+    <li>Klasik</li>
+</ol>
 
 <h2> En Sevdiğim Belgesel Türleri </h2> <!-- İkinci başlıkla aynı tipte bir başlık daha oluşturuldu. -->
-<p>1.Doğa Belgeselleri</p>
-<p>2.Bilimsel Belgeseller</p>
-<p>3.Sanat Belgeselleri</p>
+<ol>
+    <li>Doğa Belgeselleri</li>
+    <li>Bilim Belgeselleri</li>
+    <li>Sanat Belgeselleri</li>
+</ol>
+
+<h2>İlgi Alanlarım</h2>
+<ol>
+    <li>Film
+        <ul>
+            <li>Iron Man 2</li>
+            <li>Rush Hour</li>
+            <li>The Dark Knight</li>
+        </ul>
+    </li>
+    <li>Dizi
+        <ul>
+            <li>Game of Thrones</li>
+            <li>Rome</li>
+            <li>Black Sails</li>
+        </ul>
+    </li>
+    <li>Kitap
+        <ul>
+            <li>Harry Potter</li>
+            <li>Şeker Portakalı</li>
+            <li>Monte Cristo Kontu</li>
+        </ul>
+    </li>
+</ol>
+<br>
+<h2>Sevdiğim Diziler</h2>
+<strong>Game of Thrones</strong>
+<figure>
+<img src="https://assets-prd.ignimgs.com/2022/01/14/gameofthrones-allseasons-sq-1642120207458.jpg"  
+ height="500" alt="Game of Thrones" align="right">
+<figcaption>Game of Thrones (Türkçe: Taht Oyunları), David Benioff ve D. B. Weiss tarafından yaratılan ve HBO'da yayımlanan Amerikan fantastik televizyon dizisidir. George R. R. Martin'in epik fantezi serisi Buz ve Ateşin Şarkısı'ndan uyarlanmış olan dizi, adını serinin ilk kitabından almaktadır. </figcaption>
+</figure>
